--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 </head>
 <body>
     <div class="main">
+
+
+
+      <div class="container">
           <div class="container1">
             <h2>Join Our Community</h2>
             <h4>30 day, hassle-free money back <br>guarantee</h4>
             <p>Gain access to our full library of tutorials along with expert code reviews
                 Perfect for any developers who are serious about honing their skills
             </p>
-          </div>
-          <div class="container2">
+            </div>
+            <div class="container2">
             <h2>
              Monthly Subscription
             </h2>
@@ -26,46 +30,22 @@
             <p>
              Full access for less than $1 a day
             </p>
+            <input type="button" value="Sign Up"  id="input">
 
           </div>
           <div class="container3">
-
+            <h3>Why Us</h3>
+              <p>Coding Exercises</p>
+              <p>Access To Our Github Repos</p>
+              <p>Community Forum</p>
+              <p>Flashcard Decks</p>
           </div>
 
 
 
 
 
-            
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </div>
 
 
 
